--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
   </head>
   <body>
     <!-- quasar:entry-point -->
